Switched from Apache Commons components to standard Java/Sun (HttpsURLConnection and BASE64Encoder). 'request' method was rewritten, but library public interface remained backward compatible.